// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`Storyshots Custom Inputs/CustomInputWithErrorOutput Initial View 1`] = `
<div
  data-css-18sl43g=""
>
  <div
    data-css-1uksfg7=""
  >
    <div
      data-css-t3tkv6=""
    >
      <div
        data-css-k3uih6=""
      >
        <div>
          <div
            className="bp3-form-group bp3-intent-danger CustomInputWithErrorOutput CustomInputWithErrorOutput__undefined "
          >
            <label
              className="bp3-label"
              htmlFor={undefined}
            >
              
               
              <span
                className="bp3-text-muted"
              />
            </label>
            <div
              className="bp3-form-content"
            >
              <div
                className="bp3-input-group"
              >
                <input
                  className="bp3-input"
                  id={undefined}
                  placeholder="This is my input"
                  style={
                    Object {
                      "paddingRight": 10,
                    }
                  }
                  type="text"
                />
              </div>
              
            </div>
          </div>
        </div>
        <div
          data-css-1xjdp6g=""
        >
          <div
            data-css-1u3clyi=""
          />
          <div
            data-css-1vfpuyw=""
          />
        </div>
        <div
          data-css-1l117w4=""
        >
          <div
            data-css-6x2xk9=""
          />
          <div
            data-css-dh4rml=""
          />
        </div>
        <div
          data-css-3dqrhs=""
        >
          <div
            data-css-jidh41=""
          />
          <div
            data-css-zkhvkf=""
          />
        </div>
        <div
          data-css-14agfjn=""
        >
          <div
            data-css-1dkszzo=""
          />
          <div
            data-css-mqumhe=""
          />
        </div>
      </div>
    </div>
  </div>
</div>
`;

exports[`Storyshots Custom Inputs/CustomInputWithErrorOutput With Error Text 1`] = `
<div
  data-css-18sl43g=""
>
  <div
    data-css-1uksfg7=""
  >
    <div
      data-css-t3tkv6=""
    >
      <div
        data-css-k3uih6=""
      >
        <div>
          <div
            className="bp3-form-group bp3-intent-danger CustomInputWithErrorOutput CustomInputWithErrorOutput__undefined "
          >
            <label
              className="bp3-label"
              htmlFor={undefined}
            >
              
               
              <span
                className="bp3-text-muted"
              />
            </label>
            <div
              className="bp3-form-content"
            >
              <div
                className="bp3-input-group"
              >
                <input
                  className="bp3-input"
                  id={undefined}
                  onChange={[Function]}
                  placeholder=""
                  style={
                    Object {
                      "paddingRight": 10,
                    }
                  }
                  type="text"
                  value="123456"
                />
              </div>
              <div
                className="bp3-form-helper-text"
              >
                Must be a string.
              </div>
            </div>
          </div>
        </div>
        <div
          data-css-1xjdp6g=""
        >
          <div
            data-css-1u3clyi=""
          />
          <div
            data-css-1vfpuyw=""
          />
        </div>
        <div
          data-css-1l117w4=""
        >
          <div
            data-css-6x2xk9=""
          />
          <div
            data-css-dh4rml=""
          />
        </div>
        <div
          data-css-3dqrhs=""
        >
          <div
            data-css-jidh41=""
          />
          <div
            data-css-zkhvkf=""
          />
        </div>
        <div
          data-css-14agfjn=""
        >
          <div
            data-css-1dkszzo=""
          />
          <div
            data-css-mqumhe=""
          />
        </div>
      </div>
    </div>
  </div>
</div>
`;

exports[`Storyshots Custom Inputs/CustomInputWithErrorOutput With Label 1`] = `
<div
  data-css-18sl43g=""
>
  <div
    data-css-1uksfg7=""
  >
    <div
      data-css-t3tkv6=""
    >
      <div
        data-css-k3uih6=""
      >
        <div>
          <div
            className="bp3-form-group bp3-intent-danger CustomInputWithErrorOutput CustomInputWithErrorOutput__undefined "
          >
            <label
              className="bp3-label"
              htmlFor={undefined}
            >
              My Name : 
               
              <span
                className="bp3-text-muted"
              />
            </label>
            <div
              className="bp3-form-content"
            >
              <div
                className="bp3-input-group"
              >
                <input
                  className="bp3-input"
                  id={undefined}
                  onChange={[Function]}
                  placeholder=""
                  style={
                    Object {
                      "paddingRight": 10,
                    }
                  }
                  type="text"
                  value="John"
                />
              </div>
              
            </div>
          </div>
        </div>
        <div
          data-css-1xjdp6g=""
        >
          <div
            data-css-1u3clyi=""
          />
          <div
            data-css-1vfpuyw=""
          />
        </div>
        <div
          data-css-1l117w4=""
        >
          <div
            data-css-6x2xk9=""
          />
          <div
            data-css-dh4rml=""
          />
        </div>
        <div
          data-css-3dqrhs=""
        >
          <div
            data-css-jidh41=""
          />
          <div
            data-css-zkhvkf=""
          />
        </div>
        <div
          data-css-14agfjn=""
        >
          <div
            data-css-1dkszzo=""
          />
          <div
            data-css-mqumhe=""
          />
        </div>
      </div>
    </div>
  </div>
</div>
`;

exports[`Storyshots Forms/AddWebsiteForm Initial View 1`] = `
<div
  className="AddWebsiteForm"
>
  <form
    onSubmit={[Function]}
  >
    <div>
      <div
        className="bp3-form-group bp3-intent-danger CustomInputWithErrorOutput CustomInputWithErrorOutput__websiteName "
      >
        <label
          className="bp3-label"
          htmlFor="websiteName"
        >
          Website Name : 
           
          <span
            className="bp3-text-muted"
          />
        </label>
        <div
          className="bp3-form-content"
        >
          <div
            className="bp3-input-group"
          >
            <input
              className="bp3-input"
              id="websiteName"
              name="websiteName"
              onBlur={[Function]}
              onChange={[Function]}
              onDragStart={[Function]}
              onDrop={[Function]}
              onFocus={[Function]}
              placeholder="Enter A Descriptive Name"
              style={
                Object {
                  "paddingRight": 10,
                }
              }
              type="text"
              value=""
            />
          </div>
          
        </div>
      </div>
    </div>
    <div>
      <div
        className="bp3-form-group bp3-intent-danger CustomInputWithErrorOutput CustomInputWithErrorOutput__url "
      >
        <label
          className="bp3-label"
          htmlFor="url"
        >
          URL : 
           
          <span
            className="bp3-text-muted"
          />
        </label>
        <div
          className="bp3-form-content"
        >
          <div
            className="bp3-input-group"
          >
            <input
              className="bp3-input"
              id="url"
              name="url"
              onBlur={[Function]}
              onChange={[Function]}
              onDragStart={[Function]}
              onDrop={[Function]}
              onFocus={[Function]}
              placeholder="Enter Valid URL"
              style={
                Object {
                  "paddingRight": 10,
                }
              }
              type="text"
              value=""
            />
          </div>
          
        </div>
      </div>
    </div>
    <button
      className="bp3-button bp3-disabled bp3-fill bp3-large bp3-intent-success AuthHelperForm__Button"
      data-testid="submitButton"
      disabled={true}
      onClick={undefined}
      onKeyDown={[Function]}
      onKeyUp={[Function]}
      tabIndex={-1}
      type="submit"
    >
      <span
        className="bp3-icon bp3-icon-add"
        icon="add"
      >
        <svg
          data-icon="add"
          fill={undefined}
          height={16}
          viewBox="0 0 16 16"
          width={16}
        >
          <desc>
            add
          </desc>
          <path
            d="M10.99 6.99h-2v-2c0-.55-.45-1-1-1s-1 .45-1 1v2h-2c-.55 0-1 .45-1 1s.45 1 1 1h2v2c0 .55.45 1 1 1s1-.45 1-1v-2h2c.55 0 1-.45 1-1s-.45-1-1-1zm-3-7c-4.42 0-8 3.58-8 8s3.58 8 8 8 8-3.58 8-8-3.58-8-8-8zm0 14c-3.31 0-6-2.69-6-6s2.69-6 6-6 6 2.69 6 6-2.68 6-6 6z"
            fillRule="evenodd"
          />
        </svg>
      </span>
      <span
        className="bp3-button-text"
      >
        Add
      </span>
    </button>
  </form>
</div>
`;

exports[`Storyshots Forms/AuthHelperForm Initial View 1`] = `
<div
  className="AuthHelperForm AuthHelperForm__mySumbit"
>
  <form
    onSubmit={undefined}
  >
    <div>
      <div
        className="bp3-form-group bp3-intent-danger CustomInputWithErrorOutput CustomInputWithErrorOutput__name "
      >
        <label
          className="bp3-label"
          htmlFor="name"
        >
          Name : 
           
          <span
            className="bp3-text-muted"
          />
        </label>
        <div
          className="bp3-form-content"
        >
          <div
            className="bp3-input-group"
          >
            <input
              className="bp3-input"
              id="name"
              name="name"
              onBlur={[Function]}
              onChange={[Function]}
              onDragStart={[Function]}
              onDrop={[Function]}
              onFocus={[Function]}
              placeholder="Your Name"
              style={
                Object {
                  "paddingRight": 10,
                }
              }
              type="text"
              value=""
            />
          </div>
          
        </div>
      </div>
    </div>
    <button
      className="bp3-button bp3-disabled bp3-fill bp3-large bp3-intent-success AuthHelperForm__Button"
      data-testid="submitButton"
      disabled={true}
      onClick={undefined}
      onKeyDown={[Function]}
      onKeyUp={[Function]}
      tabIndex={-1}
      type="submit"
    >
      <span
        className="bp3-icon bp3-icon-upload"
        icon="upload"
      >
        <svg
          data-icon="upload"
          fill={undefined}
          height={16}
          viewBox="0 0 16 16"
          width={16}
        >
          <desc>
            upload
          </desc>
          <path
            d="M8 0C3.58 0 0 3.58 0 8s3.58 8 8 8 8-3.58 8-8-3.58-8-8-8zm3 8c-.28 0-.53-.11-.71-.29L9 6.41V12c0 .55-.45 1-1 1s-1-.45-1-1V6.41l-1.29 1.3a1.003 1.003 0 0 1-1.42-1.42l3-3C7.47 3.11 7.72 3 8 3s.53.11.71.29l3 3A1.003 1.003 0 0 1 11 8z"
            fillRule="evenodd"
          />
        </svg>
      </span>
      <span
        className="bp3-button-text"
      >
        Submbit
      </span>
    </button>
  </form>
</div>
`;

exports[`Storyshots Forms/AuthHelperForm Submit Failed OR Error 1`] = `
<div
  className="AuthHelperForm AuthHelperForm__mySumbit"
>
  <form
    onSubmit={undefined}
  >
    <div
      className="bp3-callout bp3-intent-danger bp3-callout-icon AuthHelperForm__Callout"
      data-testid="authFormCallout"
    >
      <span
        className="bp3-icon bp3-icon-error"
        icon="error"
      >
        <svg
          data-icon="error"
          fill={undefined}
          height={20}
          viewBox="0 0 20 20"
          width={20}
        >
          <desc>
            error
          </desc>
          <path
            d="M10 0C4.48 0 0 4.48 0 10s4.48 10 10 10 10-4.48 10-10S15.52 0 10 0zm1 16H9v-2h2v2zm0-3H9V4h2v9z"
            fillRule="evenodd"
          />
        </svg>
      </span>
      <h4
        className="bp3-heading"
      >
        Submit Failed
      </h4>
      Some error occured.
    </div>
    <div>
      <div
        className="bp3-form-group bp3-intent-danger CustomInputWithErrorOutput CustomInputWithErrorOutput__name "
      >
        <label
          className="bp3-label"
          htmlFor="name"
        >
          Name : 
           
          <span
            className="bp3-text-muted"
          />
        </label>
        <div
          className="bp3-form-content"
        >
          <div
            className="bp3-input-group"
          >
            <input
              className="bp3-input"
              id="name"
              name="name"
              onBlur={[Function]}
              onChange={[Function]}
              onDragStart={[Function]}
              onDrop={[Function]}
              onFocus={[Function]}
              placeholder="Your Name"
              style={
                Object {
                  "paddingRight": 10,
                }
              }
              type="text"
              value=""
            />
          </div>
          
        </div>
      </div>
    </div>
    <button
      className="bp3-button bp3-disabled bp3-fill bp3-large bp3-intent-success AuthHelperForm__Button"
      data-testid="submitButton"
      disabled={true}
      onClick={undefined}
      onKeyDown={[Function]}
      onKeyUp={[Function]}
      tabIndex={-1}
      type="submit"
    >
      <span
        className="bp3-icon bp3-icon-upload"
        icon="upload"
      >
        <svg
          data-icon="upload"
          fill={undefined}
          height={16}
          viewBox="0 0 16 16"
          width={16}
        >
          <desc>
            upload
          </desc>
          <path
            d="M8 0C3.58 0 0 3.58 0 8s3.58 8 8 8 8-3.58 8-8-3.58-8-8-8zm3 8c-.28 0-.53-.11-.71-.29L9 6.41V12c0 .55-.45 1-1 1s-1-.45-1-1V6.41l-1.29 1.3a1.003 1.003 0 0 1-1.42-1.42l3-3C7.47 3.11 7.72 3 8 3s.53.11.71.29l3 3A1.003 1.003 0 0 1 11 8z"
            fillRule="evenodd"
          />
        </svg>
      </span>
      <span
        className="bp3-button-text"
      >
        Submbit
      </span>
    </button>
  </form>
</div>
`;

exports[`Storyshots Forms/AuthHelperForm When Sumbitting [SKIP-IMAGESHOTS] 1`] = `
<div
  className="AuthHelperForm AuthHelperForm__mySumbit"
>
  <form
    onSubmit={undefined}
  >
    <div
      className="bp3-callout bp3-intent-warning bp3-callout-icon AuthHelperForm__Callout"
      data-testid="authFormCallout"
    >
      <img
        alt="Submitting"
        className="bp3-icon"
        src="formLoader.gif"
        width="25"
      />
      <h4
        className="bp3-heading"
      >
        Submitting
      </h4>
      
    </div>
    <div>
      <div
        className="bp3-form-group bp3-intent-danger CustomInputWithErrorOutput CustomInputWithErrorOutput__name "
      >
        <label
          className="bp3-label"
          htmlFor="name"
        >
          Name : 
           
          <span
            className="bp3-text-muted"
          />
        </label>
        <div
          className="bp3-form-content"
        >
          <div
            className="bp3-input-group"
          >
            <input
              className="bp3-input"
              id="name"
              name="name"
              onBlur={[Function]}
              onChange={[Function]}
              onDragStart={[Function]}
              onDrop={[Function]}
              onFocus={[Function]}
              placeholder="Your Name"
              style={
                Object {
                  "paddingRight": 10,
                }
              }
              type="text"
              value=""
            />
          </div>
          
        </div>
      </div>
    </div>
    <button
      className="bp3-button bp3-disabled bp3-fill bp3-large bp3-loading bp3-intent-success AuthHelperForm__Button"
      data-testid="submitButton"
      disabled={true}
      onClick={undefined}
      onKeyDown={[Function]}
      onKeyUp={[Function]}
      tabIndex={-1}
      type="submit"
    >
      <div
        className="bp3-spinner bp3-button-spinner"
      >
        <span
          className="bp3-spinner-animation"
        >
          <svg
            height={20}
            strokeWidth={16}
            viewBox="0 0 100 100"
            width={20}
          >
            <path
              className="bp3-spinner-track"
              d="M 50,50 m 0,-44.5 a 44.5,44.5 0 1 1 0,89 a 44.5,44.5 0 1 1 0,-89"
            />
            <path
              className="bp3-spinner-head"
              d="M 50,50 m 0,-44.5 a 44.5,44.5 0 1 1 0,89 a 44.5,44.5 0 1 1 0,-89"
              pathLength={280}
              strokeDasharray="280 280"
              strokeDashoffset={210}
            />
          </svg>
        </span>
      </div>
      <span
        className="bp3-icon bp3-icon-upload"
        icon="upload"
      >
        <svg
          data-icon="upload"
          fill={undefined}
          height={16}
          viewBox="0 0 16 16"
          width={16}
        >
          <desc>
            upload
          </desc>
          <path
            d="M8 0C3.58 0 0 3.58 0 8s3.58 8 8 8 8-3.58 8-8-3.58-8-8-8zm3 8c-.28 0-.53-.11-.71-.29L9 6.41V12c0 .55-.45 1-1 1s-1-.45-1-1V6.41l-1.29 1.3a1.003 1.003 0 0 1-1.42-1.42l3-3C7.47 3.11 7.72 3 8 3s.53.11.71.29l3 3A1.003 1.003 0 0 1 11 8z"
            fillRule="evenodd"
          />
        </svg>
      </span>
      <span
        className="bp3-button-text"
      >
        Submbit
      </span>
    </button>
  </form>
</div>
`;

exports[`Storyshots Forms/LoginForm Initial View 1`] = `
<div
  className="AuthHelperForm AuthHelperForm__LoginForm"
>
  <form
    onSubmit={[Function]}
  >
    <div>
      <div
        className="bp3-form-group bp3-intent-danger CustomInputWithErrorOutput CustomInputWithErrorOutput__email "
      >
        <label
          className="bp3-label"
          htmlFor="email"
        >
          Email : 
           
          <span
            className="bp3-text-muted"
          />
        </label>
        <div
          className="bp3-form-content"
        >
          <div
            className="bp3-input-group"
          >
            <input
              className="bp3-input"
              id="email"
              name="email"
              onBlur={[Function]}
              onChange={[Function]}
              onDragStart={[Function]}
              onDrop={[Function]}
              onFocus={[Function]}
              placeholder="Your Valid Email"
              style={
                Object {
                  "paddingRight": 10,
                }
              }
              type="email"
              value=""
            />
          </div>
          
        </div>
      </div>
    </div>
    <div>
      <div
        className="bp3-form-group bp3-intent-danger CustomInputWithErrorOutput CustomInputWithErrorOutput__password "
      >
        <label
          className="bp3-label"
          htmlFor="password"
        >
          Password : 
           
          <span
            className="bp3-text-muted"
          />
        </label>
        <div
          className="bp3-form-content"
        >
          <div
            className="bp3-input-group"
          >
            <input
              className="bp3-input"
              id="password"
              name="password"
              onBlur={[Function]}
              onChange={[Function]}
              onDragStart={[Function]}
              onDrop={[Function]}
              onFocus={[Function]}
              placeholder="Your Password"
              style={
                Object {
                  "paddingRight": 10,
                }
              }
              type="password"
              value=""
            />
          </div>
          
        </div>
      </div>
    </div>
    <button
      className="bp3-button bp3-disabled bp3-fill bp3-large bp3-intent-success AuthHelperForm__Button"
      data-testid="submitButton"
      disabled={true}
      onClick={undefined}
      onKeyDown={[Function]}
      onKeyUp={[Function]}
      tabIndex={-1}
      type="submit"
    >
      <span
        className="bp3-icon bp3-icon-upload"
        icon="upload"
      >
        <svg
          data-icon="upload"
          fill={undefined}
          height={16}
          viewBox="0 0 16 16"
          width={16}
        >
          <desc>
            upload
          </desc>
          <path
            d="M8 0C3.58 0 0 3.58 0 8s3.58 8 8 8 8-3.58 8-8-3.58-8-8-8zm3 8c-.28 0-.53-.11-.71-.29L9 6.41V12c0 .55-.45 1-1 1s-1-.45-1-1V6.41l-1.29 1.3a1.003 1.003 0 0 1-1.42-1.42l3-3C7.47 3.11 7.72 3 8 3s.53.11.71.29l3 3A1.003 1.003 0 0 1 11 8z"
            fillRule="evenodd"
          />
        </svg>
      </span>
      <span
        className="bp3-button-text"
      >
        LogIn
      </span>
    </button>
  </form>
</div>
`;

exports[`Storyshots Forms/SignupForm Initial View 1`] = `
<div
  className="AuthHelperForm AuthHelperForm__SignupForm"
>
  <form
    onSubmit={[Function]}
  >
    <div>
      <div
        className="bp3-form-group bp3-intent-danger CustomInputWithErrorOutput CustomInputWithErrorOutput__name "
      >
        <label
          className="bp3-label"
          htmlFor="name"
        >
          Full Name : 
           
          <span
            className="bp3-text-muted"
          />
        </label>
        <div
          className="bp3-form-content"
        >
          <div
            className="bp3-input-group"
          >
            <input
              className="bp3-input"
              id="name"
              name="name"
              onBlur={[Function]}
              onChange={[Function]}
              onDragStart={[Function]}
              onDrop={[Function]}
              onFocus={[Function]}
              placeholder="Your Full Name"
              style={
                Object {
                  "paddingRight": 10,
                }
              }
              type="text"
              value=""
            />
          </div>
          
        </div>
      </div>
    </div>
    <div>
      <div
        className="bp3-form-group bp3-intent-danger CustomInputWithErrorOutput CustomInputWithErrorOutput__email "
      >
        <label
          className="bp3-label"
          htmlFor="email"
        >
          Email : 
           
          <span
            className="bp3-text-muted"
          />
        </label>
        <div
          className="bp3-form-content"
        >
          <div
            className="bp3-input-group"
          >
            <input
              className="bp3-input"
              id="email"
              name="email"
              onBlur={[Function]}
              onChange={[Function]}
              onDragStart={[Function]}
              onDrop={[Function]}
              onFocus={[Function]}
              placeholder="Your Valid Email"
              style={
                Object {
                  "paddingRight": 10,
                }
              }
              type="email"
              value=""
            />
          </div>
          
        </div>
      </div>
    </div>
    <div>
      <div
        className="bp3-form-group bp3-intent-danger CustomInputWithErrorOutput CustomInputWithErrorOutput__password "
      >
        <label
          className="bp3-label"
          htmlFor="password"
        >
          Password : 
           
          <span
            className="bp3-text-muted"
          />
        </label>
        <div
          className="bp3-form-content"
        >
          <div
            className="bp3-input-group"
          >
            <input
              className="bp3-input"
              id="password"
              name="password"
              onBlur={[Function]}
              onChange={[Function]}
              onDragStart={[Function]}
              onDrop={[Function]}
              onFocus={[Function]}
              placeholder="Your Password"
              style={
                Object {
                  "paddingRight": 10,
                }
              }
              type="password"
              value=""
            />
          </div>
          
        </div>
      </div>
    </div>
    <div>
      <div
        className="bp3-form-group bp3-intent-danger CustomInputWithErrorOutput CustomInputWithErrorOutput__passwordConfirm "
      >
        <label
          className="bp3-label"
          htmlFor="passwordConfirm"
        >
          Confirm Password : 
           
          <span
            className="bp3-text-muted"
          />
        </label>
        <div
          className="bp3-form-content"
        >
          <div
            className="bp3-input-group"
          >
            <input
              className="bp3-input"
              id="passwordConfirm"
              name="passwordConfirm"
              onBlur={[Function]}
              onChange={[Function]}
              onDragStart={[Function]}
              onDrop={[Function]}
              onFocus={[Function]}
              placeholder="Confirm Your Password"
              style={
                Object {
                  "paddingRight": 10,
                }
              }
              type="password"
              value=""
            />
          </div>
          
        </div>
      </div>
    </div>
    <button
      className="bp3-button bp3-disabled bp3-fill bp3-large bp3-intent-success AuthHelperForm__Button"
      data-testid="submitButton"
      disabled={true}
      onClick={undefined}
      onKeyDown={[Function]}
      onKeyUp={[Function]}
      tabIndex={-1}
      type="submit"
    >
      <span
        className="bp3-icon bp3-icon-upload"
        icon="upload"
      >
        <svg
          data-icon="upload"
          fill={undefined}
          height={16}
          viewBox="0 0 16 16"
          width={16}
        >
          <desc>
            upload
          </desc>
          <path
            d="M8 0C3.58 0 0 3.58 0 8s3.58 8 8 8 8-3.58 8-8-3.58-8-8-8zm3 8c-.28 0-.53-.11-.71-.29L9 6.41V12c0 .55-.45 1-1 1s-1-.45-1-1V6.41l-1.29 1.3a1.003 1.003 0 0 1-1.42-1.42l3-3C7.47 3.11 7.72 3 8 3s.53.11.71.29l3 3A1.003 1.003 0 0 1 11 8z"
            fillRule="evenodd"
          />
        </svg>
      </span>
      <span
        className="bp3-button-text"
      >
        SignUp
      </span>
    </button>
  </form>
</div>
`;

exports[`Storyshots Pages/DashboardPage Intitial View 1`] = `
<div
  className="DashboardPage animation--pageTransition"
>
  <div
    className="DashboardPage__heading"
  >
    <span
      className="bp3-icon bp3-icon-dashboard"
      icon="dashboard"
    >
      <svg
        data-icon="dashboard"
        fill={undefined}
        height={16}
        viewBox="0 0 16 16"
        width={16}
      >
        <desc>
          dashboard
        </desc>
        <path
          d="M5 4c-.55 0-1 .45-1 1s.45 1 1 1 1-.45 1-1-.45-1-1-1zM4 7c-.55 0-1 .45-1 1s.45 1 1 1 1-.45 1-1-.45-1-1-1zm4-2c.55 0 1-.45 1-1s-.45-1-1-1-1 .45-1 1 .45 1 1 1zm-2 6c0 1.1.9 2 2 2s2-.9 2-2c0-.53-2-5-2-5s-2 4.47-2 5zM8 0C3.58 0 0 3.58 0 8s3.58 8 8 8 8-3.58 8-8-3.58-8-8-8zm0 14c-3.31 0-6-2.69-6-6s2.69-6 6-6 6 2.69 6 6-2.69 6-6 6zm4-9c0-.55-.45-1-1-1s-1 .45-1 1 .45 1 1 1 1-.45 1-1zm0 2c-.55 0-1 .45-1 1s.45 1 1 1 1-.45 1-1-.45-1-1-1z"
          fillRule="evenodd"
        />
      </svg>
    </span>
    DASHBOARD
  </div>
  <div
    className="DashboardPage__mainSections"
  >
    <div
      className="DashboardPage__mainSections__topBar DashboardPage__mainSections__topBar--hide"
    >
      <div
        className="DashboardPage__mainSections--item"
      >
        <div
          className="DashboardSmallInfo DashboardSmallInfo--sites"
        >
          <div
            className="DashboardSmallInfo__info"
          >
            0
          </div>
          <div
            className="DashboardSmallInfo__title"
          >
            <span
              className="bp3-icon bp3-icon-globe-network"
              icon="globe-network"
            >
              <svg
                data-icon="globe-network"
                fill={undefined}
                height={16}
                viewBox="0 0 16 16"
                width={16}
              >
                <desc>
                  globe-network
                </desc>
                <path
                  d="M8 0C3.58 0 0 3.58 0 8s3.58 8 8 8 8-3.58 8-8-3.58-8-8-8zm5.17 5h-2.44c-.21-1.11-.51-2.03-.91-2.69 1.43.46 2.61 1.43 3.35 2.69zM10 8c0 .73-.05 1.39-.12 2H6.12C6.05 9.39 6 8.73 6 8s.05-1.39.12-2h3.76c.07.61.12 1.27.12 2zM8 2c.67 0 1.36 1.1 1.73 3H6.27C6.64 3.1 7.33 2 8 2zm-1.82.31c-.4.66-.71 1.58-.91 2.69H2.83a6.025 6.025 0 0 1 3.35-2.69zM2 8c0-.7.13-1.37.35-2h2.76C5.04 6.62 5 7.28 5 8s.04 1.38.11 2H2.35C2.13 9.37 2 8.7 2 8zm.83 3h2.44c.21 1.11.51 2.03.91 2.69A6.025 6.025 0 0 1 2.83 11zM8 14c-.67 0-1.36-1.1-1.73-3h3.46c-.37 1.9-1.06 3-1.73 3zm1.82-.31c.4-.66.7-1.58.91-2.69h2.44a6.025 6.025 0 0 1-3.35 2.69zM13.65 10h-2.76c.07-.62.11-1.28.11-2s-.04-1.38-.11-2h2.76c.22.63.35 1.3.35 2s-.13 1.37-.35 2z"
                  fillRule="evenodd"
                />
              </svg>
            </span>
            <span>
              SITES
            </span>
          </div>
        </div>
      </div>
      <div
        className="DashboardPage__mainSections--item"
      >
        <div
          className="DashboardSmallInfo DashboardSmallInfo--online"
        >
          <div
            className="DashboardSmallInfo__info"
          >
            0
          </div>
          <div
            className="DashboardSmallInfo__title"
          >
            <span
              className="bp3-icon bp3-icon-feed"
              icon="feed"
            >
              <svg
                data-icon="feed"
                fill={undefined}
                height={16}
                viewBox="0 0 16 16"
                width={16}
              >
                <desc>
                  feed
                </desc>
                <path
                  d="M1.99 11.99c-1.1 0-2 .9-2 2s.9 2 2 2 2-.9 2-2-.89-2-2-2zm1-4c-.55 0-1 .45-1 1s.45 1 1 1c1.66 0 3 1.34 3 3 0 .55.45 1 1 1s1-.45 1-1c0-2.76-2.24-5-5-5zm0-4c-.55 0-1 .45-1 1s.45 1 1 1c3.87 0 7 3.13 7 7 0 .55.45 1 1 1s1-.45 1-1a9 9 0 0 0-9-9zm0-4c-.55 0-1 .45-1 1s.45 1 1 1c6.08 0 11 4.92 11 11 0 .55.45 1 1 1s1-.45 1-1c0-7.18-5.82-13-13-13z"
                  fillRule="evenodd"
                />
              </svg>
            </span>
            <span>
               ONLINE
            </span>
          </div>
        </div>
      </div>
      <div
        className="DashboardPage__mainSections--item"
      >
        <div
          className="DashboardSmallInfo DashboardSmallInfo--offline"
        >
          <div
            className="DashboardSmallInfo__info"
          >
            0
          </div>
          <div
            className="DashboardSmallInfo__title"
          >
            <span
              className="bp3-icon bp3-icon-disable"
              icon="disable"
            >
              <svg
                data-icon="disable"
                fill={undefined}
                height={16}
                viewBox="0 0 16 16"
                width={16}
              >
                <desc>
                  disable
                </desc>
                <path
                  d="M7.99-.01c-4.42 0-8 3.58-8 8s3.58 8 8 8 8-3.58 8-8-3.58-8-8-8zm-6 8c0-3.31 2.69-6 6-6 1.3 0 2.49.42 3.47 1.12l-8.35 8.35c-.7-.98-1.12-2.17-1.12-3.47zm6 6c-1.3 0-2.49-.42-3.47-1.12l8.35-8.35c.7.98 1.12 2.17 1.12 3.47 0 3.32-2.68 6-6 6z"
                  fillRule="evenodd"
                />
              </svg>
            </span>
            <span>
               OFFLINE
            </span>
          </div>
        </div>
      </div>
    </div>
    <div
      className="DashboardPage__mainSections--item"
    >
      <div
        className="AddWebsite"
      >
        <div
          className="AddWebsite--closed"
          onClick={[Function]}
        >
          <div>
            <span
              className="bp3-icon bp3-icon-add"
              icon="add"
            >
              <svg
                data-icon="add"
                fill={undefined}
                height="25"
                viewBox="0 0 20 20"
                width="25"
              >
                <desc>
                  add
                </desc>
                <path
                  d="M10 0C4.48 0 0 4.48 0 10s4.48 10 10 10 10-4.48 10-10S15.52 0 10 0zm0 18c-4.42 0-8-3.58-8-8s3.58-8 8-8 8 3.58 8 8-3.58 8-8 8zm5-9h-4V5c0-.55-.45-1-1-1s-1 .45-1 1v4H5c-.55 0-1 .45-1 1s.45 1 1 1h4v4c0 .55.45 1 1 1s1-.45 1-1v-4h4c.55 0 1-.45 1-1s-.45-1-1-1z"
                  fillRule="evenodd"
                />
              </svg>
            </span>
            <div>
              Add Website
            </div>
          </div>
        </div>
      </div>
    </div>
    <div
      className="xyz DashboardPage__mainSections--item"
    >
      <div
        className="WebsiteList"
      >
        <div
          className="bp3-spinner bp3-intent-success"
        >
          <span
            className="bp3-spinner-animation"
          >
            <svg
              height={100}
              strokeWidth={4}
              viewBox="0 0 100 100"
              width={100}
            >
              <path
                className="bp3-spinner-track"
                d="M 50,50 m 0,-44.5 a 44.5,44.5 0 1 1 0,89 a 44.5,44.5 0 1 1 0,-89"
              />
              <path
                className="bp3-spinner-head"
                d="M 50,50 m 0,-44.5 a 44.5,44.5 0 1 1 0,89 a 44.5,44.5 0 1 1 0,-89"
                pathLength={280}
                strokeDasharray="280 280"
                strokeDashoffset={210}
              />
            </svg>
          </span>
        </div>
      </div>
    </div>
  </div>
</div>
`;

exports[`Storyshots Pages/HomePage Intitial View 1`] = `
<div
  style={
    Object {
      "background": "linear-gradient(90deg, #00d2ff 0%, #3a47d5 100%)",
    }
  }
>
  <div
    className="HomePage animation--pageTransition"
  >
    <div>
      <h1
        className="animation--textExpand"
      >
        Hackerbay Server Monitoring
      </h1>
      <h2
        className="animation--textExpand"
      >
        Status Page, Monitoring and On-call made simple.
      </h2>
      <div
        className="HomePage__mainArea"
      >
        <div
          className="HomePage__mainArea__descriptions"
        >
          <p>
            Hackerbay monitors your website, dashboards, API's, and more and alerts your team when downtime happens. We also give you a Status Page which keeps your customers looped in and improves transparency.
          </p>
        </div>
        <div
          className="HomePage__mainArea__photo"
        >
          <img
            alt="Server Monitoring"
            src="serverMonitoring.svg"
          />
        </div>
      </div>
      <div
        className="HomePage__links"
      >
        <a
          href="/login"
          onClick={[Function]}
        >
          <span
            className="HomePage__loginButton"
          >
            <span
              className="bp3-icon bp3-icon-log-in"
              icon="log-in"
            >
              <svg
                data-icon="log-in"
                fill={undefined}
                height={16}
                viewBox="0 0 16 16"
                width={16}
              >
                <desc>
                  log-in
                </desc>
                <path
                  d="M11 8c0-.28-.11-.53-.29-.71l-3-3a1.003 1.003 0 0 0-1.42 1.42L7.59 7H1c-.55 0-1 .45-1 1s.45 1 1 1h6.59L6.3 10.29c-.19.18-.3.43-.3.71a1.003 1.003 0 0 0 1.71.71l3-3c.18-.18.29-.43.29-.71zm4-8H9c-.55 0-1 .45-1 1s.45 1 1 1h5v12H9c-.55 0-1 .45-1 1s.45 1 1 1h6c.55 0 1-.45 1-1V1c0-.55-.45-1-1-1z"
                  fillRule="evenodd"
                />
              </svg>
            </span>
            <span>
              Login
            </span>
          </span>
        </a>
        <span>
          Or
        </span>
        <a
          href="/signup"
          onClick={[Function]}
        >
          <span
            className="HomePage__signupButton"
          >
            <span
              className="bp3-icon bp3-icon-badge"
              icon="badge"
            >
              <svg
                data-icon="badge"
                fill={undefined}
                height={16}
                viewBox="0 0 16 16"
                width={16}
              >
                <desc>
                  badge
                </desc>
                <path
                  d="M13.36 4.59c-.15-1.13.5-2.01 1.1-2.87L13.43.53c-1.72.88-4.12.65-5.63-.53-1.51 1.18-3.91 1.41-5.63.52l-1.03 1.2c.61.86 1.25 1.74 1.1 2.87-.3 2.29-2.45 4.17-1.32 6.68.45 1.14 1.44 1.9 2.72 2.2 1.56.36 3.52.72 4.16 2.53.64-1.81 2.6-2.16 4.16-2.54 1.28-.3 2.27-1.06 2.72-2.2 1.12-2.5-1.03-4.38-1.32-6.67z"
                  fillRule="evenodd"
                />
              </svg>
            </span>
            <span>
              Signup
            </span>
          </span>
        </a>
        <span>
          To Get Started.
        </span>
      </div>
    </div>
  </div>
</div>
`;

exports[`Storyshots Pages/LoginPage Intitial View 1`] = `
<div
  style={
    Object {
      "background": "linear-gradient(90deg, #00d2ff 0%, #3a47d5 100%)",
    }
  }
>
  <div
    className="LoginPage animation--pageTransition"
  >
    <div>
      <h1
        className="LoginPage__header"
      >
        Let's Login To Your Hackerbay Account
      </h1>
      <div
        className="AuthHelperForm AuthHelperForm__LoginForm"
      >
        <form
          onSubmit={[Function]}
        >
          <div>
            <div
              className="bp3-form-group bp3-intent-danger CustomInputWithErrorOutput CustomInputWithErrorOutput__email "
            >
              <label
                className="bp3-label"
                htmlFor="email"
              >
                Email : 
                 
                <span
                  className="bp3-text-muted"
                />
              </label>
              <div
                className="bp3-form-content"
              >
                <div
                  className="bp3-input-group"
                >
                  <input
                    className="bp3-input"
                    id="email"
                    name="email"
                    onBlur={[Function]}
                    onChange={[Function]}
                    onDragStart={[Function]}
                    onDrop={[Function]}
                    onFocus={[Function]}
                    placeholder="Your Valid Email"
                    style={
                      Object {
                        "paddingRight": 10,
                      }
                    }
                    type="email"
                    value=""
                  />
                </div>
                
              </div>
            </div>
          </div>
          <div>
            <div
              className="bp3-form-group bp3-intent-danger CustomInputWithErrorOutput CustomInputWithErrorOutput__password "
            >
              <label
                className="bp3-label"
                htmlFor="password"
              >
                Password : 
                 
                <span
                  className="bp3-text-muted"
                />
              </label>
              <div
                className="bp3-form-content"
              >
                <div
                  className="bp3-input-group"
                >
                  <input
                    className="bp3-input"
                    id="password"
                    name="password"
                    onBlur={[Function]}
                    onChange={[Function]}
                    onDragStart={[Function]}
                    onDrop={[Function]}
                    onFocus={[Function]}
                    placeholder="Your Password"
                    style={
                      Object {
                        "paddingRight": 10,
                      }
                    }
                    type="password"
                    value=""
                  />
                </div>
                
              </div>
            </div>
          </div>
          <button
            className="bp3-button bp3-disabled bp3-fill bp3-large bp3-intent-success AuthHelperForm__Button"
            data-testid="submitButton"
            disabled={true}
            onClick={undefined}
            onKeyDown={[Function]}
            onKeyUp={[Function]}
            tabIndex={-1}
            type="submit"
          >
            <span
              className="bp3-icon bp3-icon-upload"
              icon="upload"
            >
              <svg
                data-icon="upload"
                fill={undefined}
                height={16}
                viewBox="0 0 16 16"
                width={16}
              >
                <desc>
                  upload
                </desc>
                <path
                  d="M8 0C3.58 0 0 3.58 0 8s3.58 8 8 8 8-3.58 8-8-3.58-8-8-8zm3 8c-.28 0-.53-.11-.71-.29L9 6.41V12c0 .55-.45 1-1 1s-1-.45-1-1V6.41l-1.29 1.3a1.003 1.003 0 0 1-1.42-1.42l3-3C7.47 3.11 7.72 3 8 3s.53.11.71.29l3 3A1.003 1.003 0 0 1 11 8z"
                  fillRule="evenodd"
                />
              </svg>
            </span>
            <span
              className="bp3-button-text"
            >
              LogIn
            </span>
          </button>
        </form>
      </div>
      <p
        className="LoginPage__alreadyHaveMsg"
      >
        Don't have an account? 
        <a
          href="/signup"
          onClick={[Function]}
        >
          SignUp
        </a>
      </p>
    </div>
  </div>
</div>
`;

exports[`Storyshots Pages/SignupPage Intitial View 1`] = `
<div
  style={
    Object {
      "background": "linear-gradient(90deg, #00d2ff 0%, #3a47d5 100%)",
    }
  }
>
  <div
    className="SignupPage animation--pageTransition"
  >
    <div>
      <h1
        className="SignupPage__header"
      >
        Let's Create Your Hackerbay Account
      </h1>
      <div
        className="AuthHelperForm AuthHelperForm__SignupForm"
      >
        <form
          onSubmit={[Function]}
        >
          <div>
            <div
              className="bp3-form-group bp3-intent-danger CustomInputWithErrorOutput CustomInputWithErrorOutput__name "
            >
              <label
                className="bp3-label"
                htmlFor="name"
              >
                Full Name : 
                 
                <span
                  className="bp3-text-muted"
                />
              </label>
              <div
                className="bp3-form-content"
              >
                <div
                  className="bp3-input-group"
                >
                  <input
                    className="bp3-input"
                    id="name"
                    name="name"
                    onBlur={[Function]}
                    onChange={[Function]}
                    onDragStart={[Function]}
                    onDrop={[Function]}
                    onFocus={[Function]}
                    placeholder="Your Full Name"
                    style={
                      Object {
                        "paddingRight": 10,
                      }
                    }
                    type="text"
                    value=""
                  />
                </div>
                
              </div>
            </div>
          </div>
          <div>
            <div
              className="bp3-form-group bp3-intent-danger CustomInputWithErrorOutput CustomInputWithErrorOutput__email "
            >
              <label
                className="bp3-label"
                htmlFor="email"
              >
                Email : 
                 
                <span
                  className="bp3-text-muted"
                />
              </label>
              <div
                className="bp3-form-content"
              >
                <div
                  className="bp3-input-group"
                >
                  <input
                    className="bp3-input"
                    id="email"
                    name="email"
                    onBlur={[Function]}
                    onChange={[Function]}
                    onDragStart={[Function]}
                    onDrop={[Function]}
                    onFocus={[Function]}
                    placeholder="Your Valid Email"
                    style={
                      Object {
                        "paddingRight": 10,
                      }
                    }
                    type="email"
                    value=""
                  />
                </div>
                
              </div>
            </div>
          </div>
          <div>
            <div
              className="bp3-form-group bp3-intent-danger CustomInputWithErrorOutput CustomInputWithErrorOutput__password "
            >
              <label
                className="bp3-label"
                htmlFor="password"
              >
                Password : 
                 
                <span
                  className="bp3-text-muted"
                />
              </label>
              <div
                className="bp3-form-content"
              >
                <div
                  className="bp3-input-group"
                >
                  <input
                    className="bp3-input"
                    id="password"
                    name="password"
                    onBlur={[Function]}
                    onChange={[Function]}
                    onDragStart={[Function]}
                    onDrop={[Function]}
                    onFocus={[Function]}
                    placeholder="Your Password"
                    style={
                      Object {
                        "paddingRight": 10,
                      }
                    }
                    type="password"
                    value=""
                  />
                </div>
                
              </div>
            </div>
          </div>
          <div>
            <div
              className="bp3-form-group bp3-intent-danger CustomInputWithErrorOutput CustomInputWithErrorOutput__passwordConfirm "
            >
              <label
                className="bp3-label"
                htmlFor="passwordConfirm"
              >
                Confirm Password : 
                 
                <span
                  className="bp3-text-muted"
                />
              </label>
              <div
                className="bp3-form-content"
              >
                <div
                  className="bp3-input-group"
                >
                  <input
                    className="bp3-input"
                    id="passwordConfirm"
                    name="passwordConfirm"
                    onBlur={[Function]}
                    onChange={[Function]}
                    onDragStart={[Function]}
                    onDrop={[Function]}
                    onFocus={[Function]}
                    placeholder="Confirm Your Password"
                    style={
                      Object {
                        "paddingRight": 10,
                      }
                    }
                    type="password"
                    value=""
                  />
                </div>
                
              </div>
            </div>
          </div>
          <button
            className="bp3-button bp3-disabled bp3-fill bp3-large bp3-intent-success AuthHelperForm__Button"
            data-testid="submitButton"
            disabled={true}
            onClick={undefined}
            onKeyDown={[Function]}
            onKeyUp={[Function]}
            tabIndex={-1}
            type="submit"
          >
            <span
              className="bp3-icon bp3-icon-upload"
              icon="upload"
            >
              <svg
                data-icon="upload"
                fill={undefined}
                height={16}
                viewBox="0 0 16 16"
                width={16}
              >
                <desc>
                  upload
                </desc>
                <path
                  d="M8 0C3.58 0 0 3.58 0 8s3.58 8 8 8 8-3.58 8-8-3.58-8-8-8zm3 8c-.28 0-.53-.11-.71-.29L9 6.41V12c0 .55-.45 1-1 1s-1-.45-1-1V6.41l-1.29 1.3a1.003 1.003 0 0 1-1.42-1.42l3-3C7.47 3.11 7.72 3 8 3s.53.11.71.29l3 3A1.003 1.003 0 0 1 11 8z"
                  fillRule="evenodd"
                />
              </svg>
            </span>
            <span
              className="bp3-button-text"
            >
              SignUp
            </span>
          </button>
        </form>
      </div>
      <p
        className="SignupPage__alreadyHaveMsg"
      >
        Already have an account? 
        <a
          href="/login"
          onClick={[Function]}
        >
          LogIn
        </a>
      </p>
    </div>
  </div>
</div>
`;

exports[`Storyshots Pages/WebsiteList Intitial View 1`] = `
<div
  className="WebsiteList"
>
  <div
    className="WebsiteList--noItems"
  >
    <div>
      <span
        className="bp3-icon bp3-icon-filter-remove"
        icon="filter-remove"
      >
        <svg
          data-icon="filter-remove"
          fill={undefined}
          height="30"
          viewBox="0 0 20 20"
          width="30"
        >
          <desc>
            filter-remove
          </desc>
          <path
            d="M15 2c0-.55-.45-1-1-1H1a1.003 1.003 0 0 0-.71 1.71L5 7.41V16a1.003 1.003 0 0 0 1.71.71l3-3c.18-.18.29-.43.29-.71V7.41l4.71-4.71c.18-.17.29-.42.29-.7zm2.91 13.5l1.79-1.79c.19-.18.3-.43.3-.71a1.003 1.003 0 0 0-1.71-.71l-1.79 1.79-1.79-1.79a1.003 1.003 0 0 0-1.42 1.42l1.79 1.79-1.79 1.79a1.003 1.003 0 0 0 1.42 1.42l1.79-1.79 1.79 1.79a1.003 1.003 0 0 0 1.42-1.42l-1.8-1.79z"
            fillRule="evenodd"
          />
        </svg>
      </span>
      <div>
        Hi, Seems like you haven't added any websites yet.
      </div>
      <div>
         Try adding website by clicking on above button.
      </div>
    </div>
  </div>
</div>
`;

exports[`Storyshots Root/App Intitial View 1`] = `
<div
  className="App"
>
  <div
    className="Header"
  >
    <div
      className="bp3-navbar bp3-fixed-top Header__Navbar bp3-dark"
    >
      <div
        className="bp3-navbar-group bp3-align-left"
      >
        <div
          className="bp3-navbar-heading Header__Navbar__heading"
        >
          <a
            data-testid="hackerbayMainLogoLink"
            href="/"
            onClick={[Function]}
          >
            <button
              className="bp3-button bp3-minimal"
              disabled={undefined}
              onClick={undefined}
              onKeyDown={[Function]}
              onKeyUp={[Function]}
              tabIndex={undefined}
              type="button"
            >
              <span
                className="bp3-icon bp3-icon-search-around"
                icon="search-around"
              >
                <svg
                  data-icon="search-around"
                  fill={undefined}
                  height={16}
                  viewBox="0 0 16 16"
                  width={16}
                >
                  <desc>
                    search-around
                  </desc>
                  <path
                    d="M13.5 11c-.51 0-.98.15-1.38.42l-2.4-2.41c.17-.3.28-.64.28-1.01s-.11-.71-.28-1.01l2.41-2.41c.39.27.86.42 1.37.42a2.5 2.5 0 0 0 0-5A2.5 2.5 0 0 0 11 2.5c0 .51.15.98.42 1.38l-2.41 2.4C8.71 6.11 8.37 6 8 6s-.71.11-1.01.28l-2.41-2.4c.27-.4.42-.87.42-1.38a2.5 2.5 0 0 0-5 0A2.5 2.5 0 0 0 2.5 5c.51 0 .98-.15 1.38-.42l2.41 2.41C6.11 7.29 6 7.63 6 8s.11.71.28 1.01l-2.41 2.41c-.39-.27-.86-.42-1.37-.42a2.5 2.5 0 0 0 0 5A2.5 2.5 0 0 0 5 13.5c0-.51-.15-.98-.42-1.38l2.41-2.41c.3.18.64.29 1.01.29s.71-.11 1.01-.28l2.41 2.41c-.27.39-.42.86-.42 1.37a2.5 2.5 0 0 0 5 0 2.5 2.5 0 0 0-2.5-2.5zm0-10c.83 0 1.5.67 1.5 1.5S14.33 4 13.5 4 12 3.33 12 2.5 12.67 1 13.5 1zm-11 3C1.67 4 1 3.33 1 2.5S1.67 1 2.5 1 4 1.67 4 2.5 3.33 4 2.5 4zm0 11c-.83 0-1.5-.67-1.5-1.5S1.67 12 2.5 12s1.5.67 1.5 1.5S3.33 15 2.5 15zm11 0c-.83 0-1.5-.67-1.5-1.5s.67-1.5 1.5-1.5 1.5.67 1.5 1.5-.67 1.5-1.5 1.5z"
                    fillRule="evenodd"
                  />
                </svg>
              </span>
              <span
                className="bp3-button-text"
              >
                HACKERBAY
              </span>
            </button>
          </a>
        </div>
        <div
          className="bp3-navbar-divider Header__Navbar__devider"
        />
        <div
          className="bp3-navbar-group bp3-align-left Header__Navbar__leftmenu"
        >
          <a
            href="/"
            onClick={[Function]}
          >
            <button
              className="bp3-button bp3-minimal"
              disabled={undefined}
              onClick={undefined}
              onKeyDown={[Function]}
              onKeyUp={[Function]}
              tabIndex={undefined}
              type="button"
            >
              <span
                className="bp3-icon bp3-icon-projects"
                icon="projects"
              >
                <svg
                  data-icon="projects"
                  fill={undefined}
                  height={16}
                  viewBox="0 0 16 16"
                  width={16}
                >
                  <desc>
                    projects
                  </desc>
                  <path
                    d="M14 3c0-.55-.45-1-1-1H3c-.55 0-1 .45-1 1v1h12V3zm-2-3H4c-.55 0-1 .45-1 1h10c0-.55-.45-1-1-1zm3 5H1c-.55 0-1 .45-1 1v9c0 .55.45 1 1 1h14c.55 0 1-.45 1-1V6c0-.55-.45-1-1-1zm-3 6c0 .55-.45 1-1 1H5c-.55 0-1-.45-1-1V9h1v2h6V9h1v2z"
                    fillRule="evenodd"
                  />
                </svg>
              </span>
              <span
                className="bp3-button-text"
              >
                Services
              </span>
            </button>
          </a>
          <a
            href="/"
            onClick={[Function]}
          >
            <button
              className="bp3-button bp3-minimal"
              disabled={undefined}
              onClick={undefined}
              onKeyDown={[Function]}
              onKeyUp={[Function]}
              tabIndex={undefined}
              type="button"
            >
              <span
                className="bp3-icon bp3-icon-dollar"
                icon="dollar"
              >
                <svg
                  data-icon="dollar"
                  fill={undefined}
                  height={16}
                  viewBox="0 0 16 16"
                  width={16}
                >
                  <desc>
                    dollar
                  </desc>
                  <path
                    d="M12.83 9.51c-.1-.3-.25-.58-.45-.84s-.45-.49-.75-.7c-.3-.2-.65-.36-1.05-.48-.16-.04-.43-.11-.8-.2-.35-.09-.73-.18-1.12-.28-.39-.1-.74-.19-1.06-.27-.31-.08-.49-.12-.54-.13-.43-.12-.78-.29-1.05-.52-.27-.23-.4-.55-.4-.95 0-.29.07-.53.21-.72.14-.19.32-.34.54-.46.22-.11.46-.19.72-.24.26-.05.52-.08.77-.08.74 0 1.35.15 1.83.46.48.3.75.83.81 1.56h2.14c0-.6-.13-1.13-.38-1.58-.25-.45-.59-.84-1.02-1.15-.43-.31-.93-.54-1.49-.7-.24-.06-.49-.1-.75-.14V1c0-.55-.45-1-1-1s-1 .45-1 1v1.08c-.23.03-.46.07-.68.13-.54.13-1.02.34-1.44.61-.42.28-.76.63-1.02 1.05-.26.43-.39.93-.39 1.5 0 .3.04.59.13.88.09.29.23.56.44.82.21.26.48.49.83.7.35.21.79.38 1.31.51.85.21 1.56.38 2.14.52.58.13 1.08.28 1.52.42.25.09.48.23.69.44.21.21.32.53.32.97 0 .21-.05.42-.14.63-.09.21-.24.39-.45.55-.21.16-.47.29-.81.39-.33.1-.73.15-1.2.15-.43 0-.84-.05-1.21-.14-.37-.09-.7-.24-.99-.43-.29-.2-.51-.45-.67-.76-.16-.31-.24-.68-.24-1.12H3c.01.71.15 1.32.43 1.84.27.52.64.94 1.1 1.27.46.33.99.58 1.61.74.27.07.56.12.85.16V15c0 .55.45 1 1 1s1-.45 1-1v-1.05c.3-.03.61-.08.9-.15.58-.13 1.1-.34 1.56-.63.46-.29.83-.66 1.11-1.11.28-.45.42-1 .42-1.64 0-.31-.05-.61-.15-.91z"
                    fillRule="evenodd"
                  />
                </svg>
              </span>
              <span
                className="bp3-button-text"
              >
                Pricing
              </span>
            </button>
          </a>
          <a
            href="/"
            onClick={[Function]}
          >
            <button
              className="bp3-button bp3-minimal"
              disabled={undefined}
              onClick={undefined}
              onKeyDown={[Function]}
              onKeyUp={[Function]}
              tabIndex={undefined}
              type="button"
            >
              <span
                className="bp3-icon bp3-icon-compass"
                icon="compass"
              >
                <svg
                  data-icon="compass"
                  fill={undefined}
                  height={16}
                  viewBox="0 0 16 16"
                  width={16}
                >
                  <desc>
                    compass
                  </desc>
                  <path
                    d="M12 8c0 .14-.03.27-.08.39l-3 6.99c-.15.37-.51.62-.92.62s-.77-.25-.92-.61l-3-6.99a1.006 1.006 0 0 1 0-.79l3-6.99C7.23.25 7.59 0 8 0s.77.25.92.61l3 6.99c.05.13.08.26.08.4zM8 3.54L6.09 8h3.82L8 3.54z"
                    fillRule="evenodd"
                  />
                </svg>
              </span>
              <span
                className="bp3-button-text"
              >
                About Us
              </span>
            </button>
          </a>
        </div>
      </div>
      <div
        className="bp3-navbar-group bp3-align-right Header__Navbar__rightmenu"
        data-testid="rightSideMenu"
      >
        <a
          href="/signup"
          onClick={[Function]}
        >
          <button
            className="bp3-button bp3-minimal"
            disabled={undefined}
            onClick={undefined}
            onKeyDown={[Function]}
            onKeyUp={[Function]}
            tabIndex={undefined}
            type="button"
          >
            <span
              className="bp3-icon bp3-icon-badge"
              icon="badge"
            >
              <svg
                data-icon="badge"
                fill={undefined}
                height={16}
                viewBox="0 0 16 16"
                width={16}
              >
                <desc>
                  badge
                </desc>
                <path
                  d="M13.36 4.59c-.15-1.13.5-2.01 1.1-2.87L13.43.53c-1.72.88-4.12.65-5.63-.53-1.51 1.18-3.91 1.41-5.63.52l-1.03 1.2c.61.86 1.25 1.74 1.1 2.87-.3 2.29-2.45 4.17-1.32 6.68.45 1.14 1.44 1.9 2.72 2.2 1.56.36 3.52.72 4.16 2.53.64-1.81 2.6-2.16 4.16-2.54 1.28-.3 2.27-1.06 2.72-2.2 1.12-2.5-1.03-4.38-1.32-6.67z"
                  fillRule="evenodd"
                />
              </svg>
            </span>
            <span
              className="bp3-button-text"
            >
              Signup
            </span>
          </button>
        </a>
        <a
          href="/login"
          onClick={[Function]}
        >
          <button
            className="bp3-button bp3-minimal"
            disabled={undefined}
            onClick={undefined}
            onKeyDown={[Function]}
            onKeyUp={[Function]}
            tabIndex={undefined}
            type="button"
          >
            <span
              className="bp3-icon bp3-icon-log-in"
              icon="log-in"
            >
              <svg
                data-icon="log-in"
                fill={undefined}
                height={16}
                viewBox="0 0 16 16"
                width={16}
              >
                <desc>
                  log-in
                </desc>
                <path
                  d="M11 8c0-.28-.11-.53-.29-.71l-3-3a1.003 1.003 0 0 0-1.42 1.42L7.59 7H1c-.55 0-1 .45-1 1s.45 1 1 1h6.59L6.3 10.29c-.19.18-.3.43-.3.71a1.003 1.003 0 0 0 1.71.71l3-3c.18-.18.29-.43.29-.71zm4-8H9c-.55 0-1 .45-1 1s.45 1 1 1h5v12H9c-.55 0-1 .45-1 1s.45 1 1 1h6c.55 0 1-.45 1-1V1c0-.55-.45-1-1-1z"
                  fillRule="evenodd"
                />
              </svg>
            </span>
            <span
              className="bp3-button-text"
            >
              Login
            </span>
          </button>
        </a>
      </div>
      <div
        className="bp3-navbar-group bp3-align-right Header__Navbar__mobilemenuIcon"
        data-testid="rightSideMenu"
        onClick={[Function]}
      >
        <span
          className="bp3-icon bp3-icon-menu"
          icon="menu"
        >
          <svg
            data-icon="menu"
            fill={undefined}
            height={16}
            viewBox="0 0 16 16"
            width={16}
          >
            <desc>
              menu
            </desc>
            <path
              d="M1 4h14c.55 0 1-.45 1-1s-.45-1-1-1H1c-.55 0-1 .45-1 1s.45 1 1 1zm14 8H1c-.55 0-1 .45-1 1s.45 1 1 1h14c.55 0 1-.45 1-1s-.45-1-1-1zm0-5H1c-.55 0-1 .45-1 1s.45 1 1 1h14c.55 0 1-.45 1-1s-.45-1-1-1z"
              fillRule="evenodd"
            />
          </svg>
        </span>
      </div>
    </div>
  </div>
  <div
    className="App__container"
  >
    <div
      className="HomePage animation--pageTransition"
    >
      <div>
        <h1
          className="animation--textExpand"
        >
          Hackerbay Server Monitoring
        </h1>
        <h2
          className="animation--textExpand"
        >
          Status Page, Monitoring and On-call made simple.
        </h2>
        <div
          className="HomePage__mainArea"
        >
          <div
            className="HomePage__mainArea__descriptions"
          >
            <p>
              Hackerbay monitors your website, dashboards, API's, and more and alerts your team when downtime happens. We also give you a Status Page which keeps your customers looped in and improves transparency.
            </p>
          </div>
          <div
            className="HomePage__mainArea__photo"
          >
            <img
              alt="Server Monitoring"
              src="serverMonitoring.svg"
            />
          </div>
        </div>
        <div
          className="HomePage__links"
        >
          <a
            href="/login"
            onClick={[Function]}
          >
            <span
              className="HomePage__loginButton"
            >
              <span
                className="bp3-icon bp3-icon-log-in"
                icon="log-in"
              >
                <svg
                  data-icon="log-in"
                  fill={undefined}
                  height={16}
                  viewBox="0 0 16 16"
                  width={16}
                >
                  <desc>
                    log-in
                  </desc>
                  <path
                    d="M11 8c0-.28-.11-.53-.29-.71l-3-3a1.003 1.003 0 0 0-1.42 1.42L7.59 7H1c-.55 0-1 .45-1 1s.45 1 1 1h6.59L6.3 10.29c-.19.18-.3.43-.3.71a1.003 1.003 0 0 0 1.71.71l3-3c.18-.18.29-.43.29-.71zm4-8H9c-.55 0-1 .45-1 1s.45 1 1 1h5v12H9c-.55 0-1 .45-1 1s.45 1 1 1h6c.55 0 1-.45 1-1V1c0-.55-.45-1-1-1z"
                    fillRule="evenodd"
                  />
                </svg>
              </span>
              <span>
                Login
              </span>
            </span>
          </a>
          <span>
            Or
          </span>
          <a
            href="/signup"
            onClick={[Function]}
          >
            <span
              className="HomePage__signupButton"
            >
              <span
                className="bp3-icon bp3-icon-badge"
                icon="badge"
              >
                <svg
                  data-icon="badge"
                  fill={undefined}
                  height={16}
                  viewBox="0 0 16 16"
                  width={16}
                >
                  <desc>
                    badge
                  </desc>
                  <path
                    d="M13.36 4.59c-.15-1.13.5-2.01 1.1-2.87L13.43.53c-1.72.88-4.12.65-5.63-.53-1.51 1.18-3.91 1.41-5.63.52l-1.03 1.2c.61.86 1.25 1.74 1.1 2.87-.3 2.29-2.45 4.17-1.32 6.68.45 1.14 1.44 1.9 2.72 2.2 1.56.36 3.52.72 4.16 2.53.64-1.81 2.6-2.16 4.16-2.54 1.28-.3 2.27-1.06 2.72-2.2 1.12-2.5-1.03-4.38-1.32-6.67z"
                    fillRule="evenodd"
                  />
                </svg>
              </span>
              <span>
                Signup
              </span>
            </span>
          </a>
          <span>
            To Get Started.
          </span>
        </div>
      </div>
    </div>
  </div>
</div>
`;

exports[`Storyshots Root/Header Intitial View 1`] = `
<div
  className="Header"
>
  <div
    className="bp3-navbar bp3-fixed-top Header__Navbar bp3-dark"
  >
    <div
      className="bp3-navbar-group bp3-align-left"
    >
      <div
        className="bp3-navbar-heading Header__Navbar__heading"
      >
        <a
          data-testid="hackerbayMainLogoLink"
          href="/"
          onClick={[Function]}
        >
          <button
            className="bp3-button bp3-minimal"
            disabled={undefined}
            onClick={undefined}
            onKeyDown={[Function]}
            onKeyUp={[Function]}
            tabIndex={undefined}
            type="button"
          >
            <span
              className="bp3-icon bp3-icon-search-around"
              icon="search-around"
            >
              <svg
                data-icon="search-around"
                fill={undefined}
                height={16}
                viewBox="0 0 16 16"
                width={16}
              >
                <desc>
                  search-around
                </desc>
                <path
                  d="M13.5 11c-.51 0-.98.15-1.38.42l-2.4-2.41c.17-.3.28-.64.28-1.01s-.11-.71-.28-1.01l2.41-2.41c.39.27.86.42 1.37.42a2.5 2.5 0 0 0 0-5A2.5 2.5 0 0 0 11 2.5c0 .51.15.98.42 1.38l-2.41 2.4C8.71 6.11 8.37 6 8 6s-.71.11-1.01.28l-2.41-2.4c.27-.4.42-.87.42-1.38a2.5 2.5 0 0 0-5 0A2.5 2.5 0 0 0 2.5 5c.51 0 .98-.15 1.38-.42l2.41 2.41C6.11 7.29 6 7.63 6 8s.11.71.28 1.01l-2.41 2.41c-.39-.27-.86-.42-1.37-.42a2.5 2.5 0 0 0 0 5A2.5 2.5 0 0 0 5 13.5c0-.51-.15-.98-.42-1.38l2.41-2.41c.3.18.64.29 1.01.29s.71-.11 1.01-.28l2.41 2.41c-.27.39-.42.86-.42 1.37a2.5 2.5 0 0 0 5 0 2.5 2.5 0 0 0-2.5-2.5zm0-10c.83 0 1.5.67 1.5 1.5S14.33 4 13.5 4 12 3.33 12 2.5 12.67 1 13.5 1zm-11 3C1.67 4 1 3.33 1 2.5S1.67 1 2.5 1 4 1.67 4 2.5 3.33 4 2.5 4zm0 11c-.83 0-1.5-.67-1.5-1.5S1.67 12 2.5 12s1.5.67 1.5 1.5S3.33 15 2.5 15zm11 0c-.83 0-1.5-.67-1.5-1.5s.67-1.5 1.5-1.5 1.5.67 1.5 1.5-.67 1.5-1.5 1.5z"
                  fillRule="evenodd"
                />
              </svg>
            </span>
            <span
              className="bp3-button-text"
            >
              HACKERBAY
            </span>
          </button>
        </a>
      </div>
      <div
        className="bp3-navbar-divider Header__Navbar__devider"
      />
      <div
        className="bp3-navbar-group bp3-align-left Header__Navbar__leftmenu"
      >
        <a
          href="/"
          onClick={[Function]}
        >
          <button
            className="bp3-button bp3-minimal"
            disabled={undefined}
            onClick={undefined}
            onKeyDown={[Function]}
            onKeyUp={[Function]}
            tabIndex={undefined}
            type="button"
          >
            <span
              className="bp3-icon bp3-icon-projects"
              icon="projects"
            >
              <svg
                data-icon="projects"
                fill={undefined}
                height={16}
                viewBox="0 0 16 16"
                width={16}
              >
                <desc>
                  projects
                </desc>
                <path
                  d="M14 3c0-.55-.45-1-1-1H3c-.55 0-1 .45-1 1v1h12V3zm-2-3H4c-.55 0-1 .45-1 1h10c0-.55-.45-1-1-1zm3 5H1c-.55 0-1 .45-1 1v9c0 .55.45 1 1 1h14c.55 0 1-.45 1-1V6c0-.55-.45-1-1-1zm-3 6c0 .55-.45 1-1 1H5c-.55 0-1-.45-1-1V9h1v2h6V9h1v2z"
                  fillRule="evenodd"
                />
              </svg>
            </span>
            <span
              className="bp3-button-text"
            >
              Services
            </span>
          </button>
        </a>
        <a
          href="/"
          onClick={[Function]}
        >
          <button
            className="bp3-button bp3-minimal"
            disabled={undefined}
            onClick={undefined}
            onKeyDown={[Function]}
            onKeyUp={[Function]}
            tabIndex={undefined}
            type="button"
          >
            <span
              className="bp3-icon bp3-icon-dollar"
              icon="dollar"
            >
              <svg
                data-icon="dollar"
                fill={undefined}
                height={16}
                viewBox="0 0 16 16"
                width={16}
              >
                <desc>
                  dollar
                </desc>
                <path
                  d="M12.83 9.51c-.1-.3-.25-.58-.45-.84s-.45-.49-.75-.7c-.3-.2-.65-.36-1.05-.48-.16-.04-.43-.11-.8-.2-.35-.09-.73-.18-1.12-.28-.39-.1-.74-.19-1.06-.27-.31-.08-.49-.12-.54-.13-.43-.12-.78-.29-1.05-.52-.27-.23-.4-.55-.4-.95 0-.29.07-.53.21-.72.14-.19.32-.34.54-.46.22-.11.46-.19.72-.24.26-.05.52-.08.77-.08.74 0 1.35.15 1.83.46.48.3.75.83.81 1.56h2.14c0-.6-.13-1.13-.38-1.58-.25-.45-.59-.84-1.02-1.15-.43-.31-.93-.54-1.49-.7-.24-.06-.49-.1-.75-.14V1c0-.55-.45-1-1-1s-1 .45-1 1v1.08c-.23.03-.46.07-.68.13-.54.13-1.02.34-1.44.61-.42.28-.76.63-1.02 1.05-.26.43-.39.93-.39 1.5 0 .3.04.59.13.88.09.29.23.56.44.82.21.26.48.49.83.7.35.21.79.38 1.31.51.85.21 1.56.38 2.14.52.58.13 1.08.28 1.52.42.25.09.48.23.69.44.21.21.32.53.32.97 0 .21-.05.42-.14.63-.09.21-.24.39-.45.55-.21.16-.47.29-.81.39-.33.1-.73.15-1.2.15-.43 0-.84-.05-1.21-.14-.37-.09-.7-.24-.99-.43-.29-.2-.51-.45-.67-.76-.16-.31-.24-.68-.24-1.12H3c.01.71.15 1.32.43 1.84.27.52.64.94 1.1 1.27.46.33.99.58 1.61.74.27.07.56.12.85.16V15c0 .55.45 1 1 1s1-.45 1-1v-1.05c.3-.03.61-.08.9-.15.58-.13 1.1-.34 1.56-.63.46-.29.83-.66 1.11-1.11.28-.45.42-1 .42-1.64 0-.31-.05-.61-.15-.91z"
                  fillRule="evenodd"
                />
              </svg>
            </span>
            <span
              className="bp3-button-text"
            >
              Pricing
            </span>
          </button>
        </a>
        <a
          href="/"
          onClick={[Function]}
        >
          <button
            className="bp3-button bp3-minimal"
            disabled={undefined}
            onClick={undefined}
            onKeyDown={[Function]}
            onKeyUp={[Function]}
            tabIndex={undefined}
            type="button"
          >
            <span
              className="bp3-icon bp3-icon-compass"
              icon="compass"
            >
              <svg
                data-icon="compass"
                fill={undefined}
                height={16}
                viewBox="0 0 16 16"
                width={16}
              >
                <desc>
                  compass
                </desc>
                <path
                  d="M12 8c0 .14-.03.27-.08.39l-3 6.99c-.15.37-.51.62-.92.62s-.77-.25-.92-.61l-3-6.99a1.006 1.006 0 0 1 0-.79l3-6.99C7.23.25 7.59 0 8 0s.77.25.92.61l3 6.99c.05.13.08.26.08.4zM8 3.54L6.09 8h3.82L8 3.54z"
                  fillRule="evenodd"
                />
              </svg>
            </span>
            <span
              className="bp3-button-text"
            >
              About Us
            </span>
          </button>
        </a>
      </div>
    </div>
    <div
      className="bp3-navbar-group bp3-align-right Header__Navbar__rightmenu"
      data-testid="rightSideMenu"
    >
      <a
        href="/signup"
        onClick={[Function]}
      >
        <button
          className="bp3-button bp3-minimal"
          disabled={undefined}
          onClick={undefined}
          onKeyDown={[Function]}
          onKeyUp={[Function]}
          tabIndex={undefined}
          type="button"
        >
          <span
            className="bp3-icon bp3-icon-badge"
            icon="badge"
          >
            <svg
              data-icon="badge"
              fill={undefined}
              height={16}
              viewBox="0 0 16 16"
              width={16}
            >
              <desc>
                badge
              </desc>
              <path
                d="M13.36 4.59c-.15-1.13.5-2.01 1.1-2.87L13.43.53c-1.72.88-4.12.65-5.63-.53-1.51 1.18-3.91 1.41-5.63.52l-1.03 1.2c.61.86 1.25 1.74 1.1 2.87-.3 2.29-2.45 4.17-1.32 6.68.45 1.14 1.44 1.9 2.72 2.2 1.56.36 3.52.72 4.16 2.53.64-1.81 2.6-2.16 4.16-2.54 1.28-.3 2.27-1.06 2.72-2.2 1.12-2.5-1.03-4.38-1.32-6.67z"
                fillRule="evenodd"
              />
            </svg>
          </span>
          <span
            className="bp3-button-text"
          >
            Signup
          </span>
        </button>
      </a>
      <a
        href="/login"
        onClick={[Function]}
      >
        <button
          className="bp3-button bp3-minimal"
          disabled={undefined}
          onClick={undefined}
          onKeyDown={[Function]}
          onKeyUp={[Function]}
          tabIndex={undefined}
          type="button"
        >
          <span
            className="bp3-icon bp3-icon-log-in"
            icon="log-in"
          >
            <svg
              data-icon="log-in"
              fill={undefined}
              height={16}
              viewBox="0 0 16 16"
              width={16}
            >
              <desc>
                log-in
              </desc>
              <path
                d="M11 8c0-.28-.11-.53-.29-.71l-3-3a1.003 1.003 0 0 0-1.42 1.42L7.59 7H1c-.55 0-1 .45-1 1s.45 1 1 1h6.59L6.3 10.29c-.19.18-.3.43-.3.71a1.003 1.003 0 0 0 1.71.71l3-3c.18-.18.29-.43.29-.71zm4-8H9c-.55 0-1 .45-1 1s.45 1 1 1h5v12H9c-.55 0-1 .45-1 1s.45 1 1 1h6c.55 0 1-.45 1-1V1c0-.55-.45-1-1-1z"
                fillRule="evenodd"
              />
            </svg>
          </span>
          <span
            className="bp3-button-text"
          >
            Login
          </span>
        </button>
      </a>
    </div>
    <div
      className="bp3-navbar-group bp3-align-right Header__Navbar__mobilemenuIcon"
      data-testid="rightSideMenu"
      onClick={[Function]}
    >
      <span
        className="bp3-icon bp3-icon-menu"
        icon="menu"
      >
        <svg
          data-icon="menu"
          fill={undefined}
          height={16}
          viewBox="0 0 16 16"
          width={16}
        >
          <desc>
            menu
          </desc>
          <path
            d="M1 4h14c.55 0 1-.45 1-1s-.45-1-1-1H1c-.55 0-1 .45-1 1s.45 1 1 1zm14 8H1c-.55 0-1 .45-1 1s.45 1 1 1h14c.55 0 1-.45 1-1s-.45-1-1-1zm0-5H1c-.55 0-1 .45-1 1s.45 1 1 1h14c.55 0 1-.45 1-1s-.45-1-1-1z"
            fillRule="evenodd"
          />
        </svg>
      </span>
    </div>
  </div>
</div>
`;

exports[`Storyshots Root/Header User Logged In 1`] = `
<div
  className="Header"
>
  <div
    className="bp3-navbar bp3-fixed-top Header__Navbar bp3-dark"
  >
    <div
      className="bp3-navbar-group bp3-align-left"
    >
      <div
        className="bp3-navbar-heading Header__Navbar__heading"
      >
        <a
          data-testid="hackerbayMainLogoLink"
          href="/"
          onClick={[Function]}
        >
          <button
            className="bp3-button bp3-minimal"
            disabled={undefined}
            onClick={undefined}
            onKeyDown={[Function]}
            onKeyUp={[Function]}
            tabIndex={undefined}
            type="button"
          >
            <span
              className="bp3-icon bp3-icon-search-around"
              icon="search-around"
            >
              <svg
                data-icon="search-around"
                fill={undefined}
                height={16}
                viewBox="0 0 16 16"
                width={16}
              >
                <desc>
                  search-around
                </desc>
                <path
                  d="M13.5 11c-.51 0-.98.15-1.38.42l-2.4-2.41c.17-.3.28-.64.28-1.01s-.11-.71-.28-1.01l2.41-2.41c.39.27.86.42 1.37.42a2.5 2.5 0 0 0 0-5A2.5 2.5 0 0 0 11 2.5c0 .51.15.98.42 1.38l-2.41 2.4C8.71 6.11 8.37 6 8 6s-.71.11-1.01.28l-2.41-2.4c.27-.4.42-.87.42-1.38a2.5 2.5 0 0 0-5 0A2.5 2.5 0 0 0 2.5 5c.51 0 .98-.15 1.38-.42l2.41 2.41C6.11 7.29 6 7.63 6 8s.11.71.28 1.01l-2.41 2.41c-.39-.27-.86-.42-1.37-.42a2.5 2.5 0 0 0 0 5A2.5 2.5 0 0 0 5 13.5c0-.51-.15-.98-.42-1.38l2.41-2.41c.3.18.64.29 1.01.29s.71-.11 1.01-.28l2.41 2.41c-.27.39-.42.86-.42 1.37a2.5 2.5 0 0 0 5 0 2.5 2.5 0 0 0-2.5-2.5zm0-10c.83 0 1.5.67 1.5 1.5S14.33 4 13.5 4 12 3.33 12 2.5 12.67 1 13.5 1zm-11 3C1.67 4 1 3.33 1 2.5S1.67 1 2.5 1 4 1.67 4 2.5 3.33 4 2.5 4zm0 11c-.83 0-1.5-.67-1.5-1.5S1.67 12 2.5 12s1.5.67 1.5 1.5S3.33 15 2.5 15zm11 0c-.83 0-1.5-.67-1.5-1.5s.67-1.5 1.5-1.5 1.5.67 1.5 1.5-.67 1.5-1.5 1.5z"
                  fillRule="evenodd"
                />
              </svg>
            </span>
            <span
              className="bp3-button-text"
            >
              HACKERBAY
            </span>
          </button>
        </a>
      </div>
      <div
        className="bp3-navbar-divider Header__Navbar__devider"
      />
      <div
        className="bp3-navbar-group bp3-align-left Header__Navbar__leftmenu"
      >
        <a
          href="/"
          onClick={[Function]}
        >
          <button
            className="bp3-button bp3-minimal"
            disabled={undefined}
            onClick={undefined}
            onKeyDown={[Function]}
            onKeyUp={[Function]}
            tabIndex={undefined}
            type="button"
          >
            <span
              className="bp3-icon bp3-icon-projects"
              icon="projects"
            >
              <svg
                data-icon="projects"
                fill={undefined}
                height={16}
                viewBox="0 0 16 16"
                width={16}
              >
                <desc>
                  projects
                </desc>
                <path
                  d="M14 3c0-.55-.45-1-1-1H3c-.55 0-1 .45-1 1v1h12V3zm-2-3H4c-.55 0-1 .45-1 1h10c0-.55-.45-1-1-1zm3 5H1c-.55 0-1 .45-1 1v9c0 .55.45 1 1 1h14c.55 0 1-.45 1-1V6c0-.55-.45-1-1-1zm-3 6c0 .55-.45 1-1 1H5c-.55 0-1-.45-1-1V9h1v2h6V9h1v2z"
                  fillRule="evenodd"
                />
              </svg>
            </span>
            <span
              className="bp3-button-text"
            >
              Services
            </span>
          </button>
        </a>
        <a
          href="/"
          onClick={[Function]}
        >
          <button
            className="bp3-button bp3-minimal"
            disabled={undefined}
            onClick={undefined}
            onKeyDown={[Function]}
            onKeyUp={[Function]}
            tabIndex={undefined}
            type="button"
          >
            <span
              className="bp3-icon bp3-icon-dollar"
              icon="dollar"
            >
              <svg
                data-icon="dollar"
                fill={undefined}
                height={16}
                viewBox="0 0 16 16"
                width={16}
              >
                <desc>
                  dollar
                </desc>
                <path
                  d="M12.83 9.51c-.1-.3-.25-.58-.45-.84s-.45-.49-.75-.7c-.3-.2-.65-.36-1.05-.48-.16-.04-.43-.11-.8-.2-.35-.09-.73-.18-1.12-.28-.39-.1-.74-.19-1.06-.27-.31-.08-.49-.12-.54-.13-.43-.12-.78-.29-1.05-.52-.27-.23-.4-.55-.4-.95 0-.29.07-.53.21-.72.14-.19.32-.34.54-.46.22-.11.46-.19.72-.24.26-.05.52-.08.77-.08.74 0 1.35.15 1.83.46.48.3.75.83.81 1.56h2.14c0-.6-.13-1.13-.38-1.58-.25-.45-.59-.84-1.02-1.15-.43-.31-.93-.54-1.49-.7-.24-.06-.49-.1-.75-.14V1c0-.55-.45-1-1-1s-1 .45-1 1v1.08c-.23.03-.46.07-.68.13-.54.13-1.02.34-1.44.61-.42.28-.76.63-1.02 1.05-.26.43-.39.93-.39 1.5 0 .3.04.59.13.88.09.29.23.56.44.82.21.26.48.49.83.7.35.21.79.38 1.31.51.85.21 1.56.38 2.14.52.58.13 1.08.28 1.52.42.25.09.48.23.69.44.21.21.32.53.32.97 0 .21-.05.42-.14.63-.09.21-.24.39-.45.55-.21.16-.47.29-.81.39-.33.1-.73.15-1.2.15-.43 0-.84-.05-1.21-.14-.37-.09-.7-.24-.99-.43-.29-.2-.51-.45-.67-.76-.16-.31-.24-.68-.24-1.12H3c.01.71.15 1.32.43 1.84.27.52.64.94 1.1 1.27.46.33.99.58 1.61.74.27.07.56.12.85.16V15c0 .55.45 1 1 1s1-.45 1-1v-1.05c.3-.03.61-.08.9-.15.58-.13 1.1-.34 1.56-.63.46-.29.83-.66 1.11-1.11.28-.45.42-1 .42-1.64 0-.31-.05-.61-.15-.91z"
                  fillRule="evenodd"
                />
              </svg>
            </span>
            <span
              className="bp3-button-text"
            >
              Pricing
            </span>
          </button>
        </a>
        <a
          href="/"
          onClick={[Function]}
        >
          <button
            className="bp3-button bp3-minimal"
            disabled={undefined}
            onClick={undefined}
            onKeyDown={[Function]}
            onKeyUp={[Function]}
            tabIndex={undefined}
            type="button"
          >
            <span
              className="bp3-icon bp3-icon-compass"
              icon="compass"
            >
              <svg
                data-icon="compass"
                fill={undefined}
                height={16}
                viewBox="0 0 16 16"
                width={16}
              >
                <desc>
                  compass
                </desc>
                <path
                  d="M12 8c0 .14-.03.27-.08.39l-3 6.99c-.15.37-.51.62-.92.62s-.77-.25-.92-.61l-3-6.99a1.006 1.006 0 0 1 0-.79l3-6.99C7.23.25 7.59 0 8 0s.77.25.92.61l3 6.99c.05.13.08.26.08.4zM8 3.54L6.09 8h3.82L8 3.54z"
                  fillRule="evenodd"
                />
              </svg>
            </span>
            <span
              className="bp3-button-text"
            >
              About Us
            </span>
          </button>
        </a>
      </div>
    </div>
    <div
      className="bp3-navbar-group bp3-align-right Header__Navbar__rightmenu"
      data-testid="rightSideMenu"
    >
      <a
        href="/dashboard"
        onClick={[Function]}
      >
        <button
          className="bp3-button bp3-minimal"
          disabled={undefined}
          onClick={undefined}
          onKeyDown={[Function]}
          onKeyUp={[Function]}
          tabIndex={undefined}
          type="button"
        >
          <span
            className="bp3-icon bp3-icon-dashboard"
            icon="dashboard"
          >
            <svg
              data-icon="dashboard"
              fill={undefined}
              height={16}
              viewBox="0 0 16 16"
              width={16}
            >
              <desc>
                dashboard
              </desc>
              <path
                d="M5 4c-.55 0-1 .45-1 1s.45 1 1 1 1-.45 1-1-.45-1-1-1zM4 7c-.55 0-1 .45-1 1s.45 1 1 1 1-.45 1-1-.45-1-1-1zm4-2c.55 0 1-.45 1-1s-.45-1-1-1-1 .45-1 1 .45 1 1 1zm-2 6c0 1.1.9 2 2 2s2-.9 2-2c0-.53-2-5-2-5s-2 4.47-2 5zM8 0C3.58 0 0 3.58 0 8s3.58 8 8 8 8-3.58 8-8-3.58-8-8-8zm0 14c-3.31 0-6-2.69-6-6s2.69-6 6-6 6 2.69 6 6-2.69 6-6 6zm4-9c0-.55-.45-1-1-1s-1 .45-1 1 .45 1 1 1 1-.45 1-1zm0 2c-.55 0-1 .45-1 1s.45 1 1 1 1-.45 1-1-.45-1-1-1z"
                fillRule="evenodd"
              />
            </svg>
          </span>
          <span
            className="bp3-button-text"
          >
            Dashboard
          </span>
        </button>
      </a>
      <a
        href="/myaccount"
        onClick={[Function]}
      >
        <button
          className="bp3-button bp3-minimal Header__Navbar__leftmenu__username"
          data-testid="myAccountButton"
          disabled={undefined}
          onClick={undefined}
          onKeyDown={[Function]}
          onKeyUp={[Function]}
          tabIndex={undefined}
          type="button"
        >
          <span
            className="bp3-icon bp3-icon-user"
            icon="user"
          >
            <svg
              data-icon="user"
              fill={undefined}
              height={16}
              viewBox="0 0 16 16"
              width={16}
            >
              <desc>
                user
              </desc>
              <path
                d="M7.99-.01A7.998 7.998 0 0 0 .03 8.77c.01.09.03.18.04.28.02.15.04.31.07.47.02.11.05.22.08.34.03.13.06.26.1.38.04.12.08.25.12.37.04.11.08.21.12.32a6.583 6.583 0 0 0 .3.65c.07.14.14.27.22.4.04.07.08.13.12.2l.27.42.1.13a7.973 7.973 0 0 0 3.83 2.82c.03.01.05.02.07.03.37.12.75.22 1.14.29l.2.03c.39.06.79.1 1.2.1s.81-.04 1.2-.1l.2-.03c.39-.07.77-.16 1.14-.29.03-.01.05-.02.07-.03a8.037 8.037 0 0 0 3.83-2.82c.03-.04.06-.08.09-.13.1-.14.19-.28.28-.42.04-.07.08-.13.12-.2.08-.13.15-.27.22-.41.04-.08.08-.17.12-.26.06-.13.11-.26.17-.39.04-.1.08-.21.12-.32.04-.12.08-.24.12-.37.04-.13.07-.25.1-.38.03-.11.06-.22.08-.34.03-.16.05-.31.07-.47.01-.09.03-.18.04-.28.02-.26.04-.51.04-.78-.03-4.41-3.61-7.99-8.03-7.99zm0 14.4c-1.98 0-3.75-.9-4.92-2.31.67-.36 1.49-.66 2.14-.95 1.16-.52 1.04-.84 1.08-1.27.01-.06.01-.11.01-.17-.41-.36-.74-.86-.96-1.44v-.01c0-.01-.01-.02-.01-.02-.05-.13-.09-.26-.12-.39-.28-.05-.44-.35-.5-.63-.06-.11-.18-.38-.15-.69.04-.41.2-.59.38-.67v-.06c0-.51.05-1.24.14-1.72.02-.13.05-.26.09-.39.17-.59.53-1.12 1.01-1.49.49-.38 1.19-.59 1.82-.59.62 0 1.32.2 1.82.59.48.37.84.9 1.01 1.49.04.13.07.26.09.4.09.48.14 1.21.14 1.72v.07c.18.08.33.26.37.66.03.31-.1.58-.16.69-.06.27-.21.57-.48.62-.03.13-.07.26-.12.38 0 .01-.01.04-.01.04-.21.57-.54 1.06-.94 1.42 0 .06.01.13.01.19.04.43-.12.75 1.05 1.27.65.29 1.47.6 2.14.95a6.415 6.415 0 0 1-4.93 2.31z"
                fillRule="evenodd"
              />
            </svg>
          </span>
          <span
            className="bp3-button-text"
          >
            John
          </span>
        </button>
      </a>
      <a
        href="/login"
        onClick={[Function]}
      >
        <button
          className="bp3-button bp3-minimal"
          data-testid="logoutButton"
          disabled={undefined}
          onClick={[Function]}
          onKeyDown={[Function]}
          onKeyUp={[Function]}
          tabIndex={undefined}
          type="button"
        >
          <span
            className="bp3-icon bp3-icon-log-out"
            icon="log-out"
          >
            <svg
              data-icon="log-out"
              fill={undefined}
              height={16}
              viewBox="0 0 16 16"
              width={16}
            >
              <desc>
                log-out
              </desc>
              <path
                d="M7 14H2V2h5c.55 0 1-.45 1-1s-.45-1-1-1H1C.45 0 0 .45 0 1v14c0 .55.45 1 1 1h6c.55 0 1-.45 1-1s-.45-1-1-1zm8.71-6.71l-3-3a1.003 1.003 0 0 0-1.42 1.42L12.59 7H6c-.55 0-1 .45-1 1s.45 1 1 1h6.59l-1.29 1.29c-.19.18-.3.43-.3.71a1.003 1.003 0 0 0 1.71.71l3-3c.18-.18.29-.43.29-.71 0-.28-.11-.53-.29-.71z"
                fillRule="evenodd"
              />
            </svg>
          </span>
          <span
            className="bp3-button-text"
          >
            LogOut
          </span>
        </button>
      </a>
    </div>
    <div
      className="bp3-navbar-group bp3-align-right Header__Navbar__mobilemenuIcon"
      data-testid="rightSideMenu"
      onClick={[Function]}
    >
      <span
        className="bp3-icon bp3-icon-menu"
        icon="menu"
      >
        <svg
          data-icon="menu"
          fill={undefined}
          height={16}
          viewBox="0 0 16 16"
          width={16}
        >
          <desc>
            menu
          </desc>
          <path
            d="M1 4h14c.55 0 1-.45 1-1s-.45-1-1-1H1c-.55 0-1 .45-1 1s.45 1 1 1zm14 8H1c-.55 0-1 .45-1 1s.45 1 1 1h14c.55 0 1-.45 1-1s-.45-1-1-1zm0-5H1c-.55 0-1 .45-1 1s.45 1 1 1h14c.55 0 1-.45 1-1s-.45-1-1-1z"
            fillRule="evenodd"
          />
        </svg>
      </span>
    </div>
  </div>
</div>
`;
